--- a/classes/getAccounts.cls
+++ b/classes/getAccounts.cls
@@ -7,6 +7,7 @@ public with sharing class getAccounts{
 
         acc = [SELECT id, name from account where id = '0012400000DjylG'];
         
+		//push test
         
     }
 
