edited getAccount class

--- a/classes/getAccounts.cls
+++ b/classes/getAccounts.cls
@@ -1,11 +1,13 @@
 public with sharing class getAccounts{
 
 
-    public Account acc;
+    public List<Account> acc;
+    public List<Contact> con;
     
     public getAccounts (ApexPages.StandardController controller){
 
-        acc = [SELECT id, name from account where id = '0012400000DjylG'];
+        acc = [SELECT id, name from account];
+        con = [SELECT id, name from contact];
         
         
     }
