--- a/classes/getAccounts.cls
+++ b/classes/getAccounts.cls
@@ -1,13 +1,11 @@
 public with sharing class getAccounts{
 
 
-    public List<Account> acc;
-    public List<Contact> con;
+    public Account acc;
     
     public getAccounts (ApexPages.StandardController controller){
 
-        acc = [SELECT id, name from account];
-        con = [SELECT id, name from contact];
+        acc = [SELECT id, name from account where id = '0012400000DjylG'];
         
         
     }
